--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
