--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
